--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "15.1.5",
     "node-appwrite": "^14.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "stackoverflow": "file:"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
