--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.1",
+    "@tabler/icons-react": "^3.29.0",
     "appwrite": "^16.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "immer": "^10.1.1",
+    "lucide-react": "^0.474.0",
     "next": "15.1.5",
     "node-appwrite": "^14.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "stackoverflow": "file:"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "stackoverflow": "file:",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
