--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
     "lucide-react": "^0.474.0",
+    "motion": "^12.0.5",
     "next": "15.1.5",
     "node-appwrite": "^14.2.0",
     "react": "^18.3.1",
