--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.1",
     "@tabler/icons-react": "^3.29.0",
+    "@uiw/react-md-editor": "^4.0.5",
     "appwrite": "^16.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
     "lucide-react": "^0.474.0",
-    "motion": "^12.0.5",
+    "motion": "^12.0.6",
     "next": "15.1.5",
     "node-appwrite": "^14.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-element-to-jsx-string": "^17.0.0",
     "stackoverflow": "file:",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
