--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
     "lucide-react": "^0.474.0",
+    "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.0.6",
     "next": "15.1.5",
     "node-appwrite": "^14.2.0",
