--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tabler/icons-react": "^3.29.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@uiw/react-md-editor": "^4.0.5",
     "appwrite": "^16.1.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
     "lucide-react": "^0.474.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.0.6",
-    "next": "15.1.5",
+    "next": "^15.1.6",
     "node-appwrite": "^14.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-element-to-jsx-string": "^17.0.0",
+    "slugify": "^1.6.6",
     "stackoverflow": "file:",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
